# ai-update-radar

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  space.yaml
.claude/: CLAUDE.md
.claude/skills/: sync-claude-code.md
.github/workflows/: auto-pr.yml  ci.yml
collectors/: README.md  __init__.py  cli.py  competitor_collector.py  env_collector.py  github_collector.py  models.py  page_diff_collector.py  rss_collector.py  zenn_collector.py
collectors/claude_code/: .last_release_state.json  README.md  analyzer.py  monitor.py
collectors/codex/: monitor.py  test_relevance.py  validate_json.py
collectors/vscode/: monitor.py
docs/: README.md  quickstart.md
docs/architecture/: overview.md
docs/changelog/: phases-completed.md
docs/claude-code/: updates-2.1.12-to-2.1.29.md  updates-2.1.12-to-2.1.33.md
docs/guides/: collecting.md  (+3 more)
evaluators/: README.md  __init__.py  article_evaluator.py  category_classifier.py  evaluation_logger.py  exporter.py  relevance_scorer.py  trend_detector.py
experiments/: README.md
exports/: README.md  adopted-2025-W51.yaml  alerts-2025-W51.yaml  collection_20260207_190047.json  digest-2025-W51.json
frontend/: package-lock.json  package.json
marketing/: __init__.py  analytics.py  content_generator.py
scripts/: generate-public-digest.py  update-article-candidates.sh  weekly-auto-publish.py  weekly_collect.sh
sources/: README.md  articles.yaml  competitors.yaml  keywords.yaml  providers.yaml  repositories.yaml
tests/: test_collectors.py  test_evaluators.py
weekly_reports/: README.md
(+77 files in other folders)
